--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> <!-- Favicon -->
+    <link rel="stylesheet" href="./style.css"> <!-- CSS -->
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="logo">
+                <a href="index.html"><img src="image/logo.png" alt="logo"></a>
+            </div>
+            <menu>
+                <ul class="list-menu">
+                    <li><a href="index.html" rel="prev" target="_self">Home</a></li>
+                    <li><a href="index.html" rel="prev" target="_self">About us</a></li>
+                    <li><a href="index.html" rel="prev" target="_self">Services</a></li>
+                    <li><a href="index.html" rel="prev" target="_self">Contact</a></li>
+                    <img src="image/close-icon.png" alt="close button">
+                </ul>
+            </menu>
+        </header>
+    </div>
 </body>
 </html>
