--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
                     <img src="image/close-icon.png" alt="close button">
                 </ul>
             </menu>
+            <button class="menu-icon"><img src="image/menu-icon.png" alt="menu icon"></button>
         </header>
+        <main>
+            <section class="left-content">
+                <h1>
+                    <strong>Interface </strong>& Experiência
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ea eveniet est quibusdam commodi maxime sed corporis quod explicabo. Deleniti nisi officiis aliquam sint quaerat dolor sapiente enim, magnam atque.
+                </p>
+                <div class="left-button">
+                    <button>Começar</button>
+                    <button>Ver mais</button>
+                </div>
+            </section>
+            <section class="right-content">
+                <img src="image/phone.png" alt="phone image">
+            </section>
+        </main>
     </div>
 </body>
 </html>
