cabecalho, menu, items de menu estilizados

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html" rel="prev" target="_self">About us</a></li>
                     <li><a href="index.html" rel="prev" target="_self">Services</a></li>
                     <li><a href="index.html" rel="prev" target="_self">Contact</a></li>
-                    <img src="image/close-icon.png" alt="close button">
+                    <img src="image/close-icon.png" alt="close button" class="close-icon">
                 </ul>
             </menu>
             <button class="menu-icon"><img src="image/menu-icon.png" alt="menu icon"></button>
