--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> <!-- Favicon -->
     <link rel="stylesheet" href="./style.css"> <!-- CSS -->
+    <link rel="stylesheet" href="media-query.css"> <!-- Responsividade -->
     <title>Landing Page</title>
 </head>
 <body>
