terminei o main, agora vou fazer o js

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </section>
             <section class="right-content">
-                <img src="image/phone.png" alt="phone image">
+                <img src="image/phone.png" alt="phone image" width="100%">
             </section>
         </main>
     </div>
