adicionei a interação com javascript concertei um bug que impedia o menu de abrir ou fechar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> <!-- Favicon -->
     <link rel="stylesheet" href="./style.css"> <!-- CSS -->
     <link rel="stylesheet" href="media-query.css"> <!-- Responsividade -->
+    <script src="app.js" defer></script> <!-- Javascript -->
     <title>Landing Page</title>
 </head>
 <body>
@@ -16,15 +17,15 @@
                 <a href="index.html"><img src="image/logo.png" alt="logo"></a>
             </div>
             <menu>
-                <ul class="list-menu">
+                <ul class="menu-list">
                     <li><a href="index.html" rel="prev" target="_self">Home</a></li>
                     <li><a href="index.html" rel="prev" target="_self">About us</a></li>
                     <li><a href="index.html" rel="prev" target="_self">Services</a></li>
                     <li><a href="index.html" rel="prev" target="_self">Contact</a></li>
                     <img src="image/close-icon.png" alt="close button" class="close-icon">
                 </ul>
+                <button class="menu-icon"><img src="image/menu-icon.png" alt="menu icon"></button>
             </menu>
-            <button class="menu-icon"><img src="image/menu-icon.png" alt="menu icon"></button>
         </header>
         <main>
             <section class="left-content">
